# ConduccionesQGIS

./: README.md  __init__.py  metadata.txt  pyproject.toml
core/: __init__.py  alineamiento.py  exportacion.py  geometria.py  models.py  perfil.py
docs/: arquitectura.md
ejemplos/: alineamiento_simple.json
gui/: __init__.py
i18n/: README.md
plugin/: __init__.py  conducciones_plugin.py
processing/: __init__.py  exportar_resultados_algorithm.py  perfil_longitudinal_algorithm.py  provider.py  tabla_alineamiento_algorithm.py
tests/: conftest.py  test_alineamiento.py  test_exportacion.py  test_perfil.py
