[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conduccionesqgis"
version = "0.3.0"
description = "Plugin de QGIS para apoyo docente en conducciones a presion."
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
